--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-index.<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+      <title>20 Questions</title>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="author" content="Darartu Abdulle">
+    <meta name="description" content="Demostrating header and paragraph"<!-- Webpage>
+    <meta name="keywords" content="hearder, paragraph, tags"> <!-- Key Words for conducting searches in Search Engines -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  
   </head>
   <body>
 
   </body>
   BENJAMIN
-20 Questions
+
 “Is it bigger than a breadbox?”
 
 “Yes.”
